[package]
name = "pwrstat-exporter"
version = "0.1.0"
authors = ["Ming Zhang <mingcao.zhang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus_exporter = "0.8.0"
env_logger = "0.8.3"
log = "0.4.14"
reqwest = { version = "0.11.1", features = ["blocking"] }
runas = "0.2.1"